# pybind_cmake_demo

./: CMakeLists.txt  README.md
plugin/: add_plugin.cpp
